# QRDoge

./: CMakeLists.txt  README.md
src/: DogeThread.cpp  DogeThread.h  HoverButton.cpp  HoverButton.h  QRDoge.cpp  QRDoge.h  Structs.h  main.cpp
src/zxing/: ZXingQtReader.h
